# spamfilter

./: .env.example  .gitignore  .pylintrc  404.html  LICENSE  MANIFEST.in  README.md  SECURITY.md  __init__.py  _config.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: documentation.yml  pylint.yml  python-package.yml  python-publish.yml
ai_and_ml/: index.html
artificial_intelligence/: index.html
contributing/: index.html
docs/: CONTRIBUTING.md  README.md  ai_and_ml.md  artificial_intelligence.md  contributing.md  documentation.md  filters.md  get_started.md  index.md  installation.md  machines.md  pipelines.md  premade.md  results.md
documentation/: index.html
filters/: capitals.py  filter.py  index.html  length.py
get_started/: index.html
installation/: index.html
pipelines/: index.html
premade/: chat.py  index.html
result/: __init__.py
results/: index.html
search/: search_index.json
src/: LICENSE  __init__.py  pyproject.toml
src/filters/: blocklist.py  bypass_detection.py  email.py  personal_information.py  word_length.py
src/machines/: __init__.py
src/spamfilter/: __init__.py
src/spamfilter/filters/: __init__.py  _check_modes.py  api.py  blocklist.py  blocklist_from_json.py  bypass_detection.py  capitals.py  check_modes.py  email.py  filter.py  length.py  ml_text_classifier.py  ollama.py  openai.py  personal_information.py  regex.py  specialchars.py  symbols.py  word_length.py
src/spamfilter/machines/: __init__.py
src/spamfilter/pipelines/: __init__.py
src/spamfilter/premade/: _construct_pipeline.py  article.py  chat.py  construct_machine.py
src/spamfilter/result/: __init__.py
src/tests/: test_premade_chat.py
tests/: test_filters.py  test_pipelines.py  test_premade_article.py  test_premade_chat.py
