[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spamfilter"
version = "2.0.1"
description = "Create spam mitigation models with ease using fully-customizable, object oriented components."
readme = "README.md"
authors = [{ name = "Magnus Schlinsog", email = "magnusschlinsog@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["spam", "spam protection", "spam filter", "spam mitigation", "anti spam"]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "mkdocs", "mkdocs-material", "mkdocstrings[python]", "python-dotenv"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]
api = ["requests"]
ollama = ["ollama"]

[project.urls]
GitHub = "https://github.com/mags0ft/spamfilter"
Homepage = "https://mags0ft.github.io/spamfilter/"